[workspace]
members = ["common", "lz4-compress", "jemallocator/jemalloc-sys", "preload", "cli-core", "cli", "server-core", "gather", "integration-tests", "mimalloc_rust", "fast_range_map"]
resolver = "2"

[profile.dev]
opt-level = 2
incremental = true

[profile.release]
opt-level = 3
lto = true
panic = "abort"
debug = true

[patch."https://github.com/litlep-nibbyt/not-perf"]
nwind = { path = "vendor/not-perf/nwind" }
perf_event_open = { path = "vendor/not-perf/perf_event_open" }
proc-maps = { path = "vendor/not-perf/proc-maps" }
thread-local-reentrant = { path = "vendor/not-perf/thread-local-reentrant" }
