[package]
name = "bytehound-preload"
version = "0.11.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"
rust-version = "1.62"

[lib]
crate-type = ["cdylib"]
name = "bytehound"

[dependencies]
parking_lot = { version = "0.12" }
libc = "0.2"
sc = { version = "0.2", optional = true }
lazy_static = "1"
log = "0.4"
glob = "0.2"
lru = { version = "0.16.3", default-features = false }
tikv-jemalloc-sys = { path = "../jemallocator/jemalloc-sys", default-features = false }
mimalloc = { path = "../mimalloc_rust", default-features = false }
goblin = "0.0.24"
smallvec = { version = "1", features = ["union"] }
ahash = "0.8.12"
hashbrown = "0.13"

fast_range_map = { path = "../fast_range_map" }

[dependencies.thread-local-reentrant]
git = "https://github.com/litlep-nibbyt/not-perf"
rev = "b280fa26780cadd649de2da0ab2ee0a9f3ec908c"

[dependencies.nwind]
git = "https://github.com/litlep-nibbyt/not-perf"
rev = "b280fa26780cadd649de2da0ab2ee0a9f3ec908c"
features = ["log", "local-unwinding"]
default-features = false

[dependencies.perf_event_open]
git = "https://github.com/litlep-nibbyt/not-perf"
rev = "b280fa26780cadd649de2da0ab2ee0a9f3ec908c"

[dependencies.common]
path = "../common"

[features]
default = []
debug-logs = ["nwind/debug-logs", "nwind/addr2line"]
nightly = ["parking_lot/nightly"]
jemalloc = []
disable-register-frame-hooks = []
